--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 html,
 body {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -36,4 +37,8 @@ body {
   min-height: 320px;
   max-width: 1280px;
   max-height: 1280px;
+}
+
+button {
+  all: unset;
 }
