--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,19 @@
   height: 100%;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(10, 50px);
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  justify-items: stretch;
-}
-
-.cell {
-  width: 50px;
-  height: 50px;
-  border: 1px solid plum;
-  cursor: pointer;
-}
-
 .selected {
   background-color: peru;
+}
+.tools-container {
+  padding-inline: calc((100vmin - var(--grid-cols) * var(--space-s)) / 2);
+  display: flex;
+  gap: var(--space-2xs);
+  margin-bottom: var(--space-2xs);
+  align-items: flex-end;
+}
+
+.progress-bar {
+  height: var(--space-3xs);
+  background-color: var(--darkgray);
+  width: 0;
 }
