--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,14 @@
   --space-2xl: clamp(7.5rem, calc(3.33rem + 20.83vmin), 20rem);
   --space-3xl: clamp(11.25rem, calc(5rem + 31.25vmin), 30rem);
 
-  --step--2: clamp(0.65rem, calc(0.34rem + 1.58vw), 1.6rem);
-  --step--1: clamp(0.78rem, calc(0.38rem + 2.03vw), 2rem);
-  --step-0: clamp(0.94rem, calc(0.42rem + 2.6vw), 2.5rem);
-  --step-1: clamp(1.13rem, calc(0.46rem + 3.33vw), 3.13rem);
-  --step-2: clamp(1.35rem, calc(0.5rem + 4.26vw), 3.91rem);
-  --step-3: clamp(1.62rem, calc(0.53rem + 5.44vw), 4.88rem);
-  --step-4: clamp(1.94rem, calc(0.56rem + 6.93vw), 6.1rem);
-  --step-5: clamp(2.33rem, calc(0.57rem + 8.83vw), 7.63rem);
+  --step--2: clamp(0.65rem, calc(0.34rem + 1.58vmin), 1.6rem);
+  --step--1: clamp(0.78rem, calc(0.38rem + 2.03vmin), 2rem);
+  --step-0: clamp(0.94rem, calc(0.42rem + 2.6vmin), 2.5rem);
+  --step-1: clamp(1.13rem, calc(0.46rem + 3.33vmin), 3.13rem);
+  --step-2: clamp(1.35rem, calc(0.5rem + 4.26vmin), 3.91rem);
+  --step-3: clamp(1.62rem, calc(0.53rem + 5.44vmin), 4.88rem);
+  --step-4: clamp(1.94rem, calc(0.56rem + 6.93vmin), 6.1rem);
+  --step-5: clamp(2.33rem, calc(0.57rem + 8.83vmin), 7.63rem);
 }
 
 *,
@@ -73,41 +73,6 @@ body {
   min-height: 320px;
   max-width: 1280px;
   max-height: 1280px;
-}
-
-button {
-}
-
-.action-btn {
-  border: 1px solid var(--darkgray);
-  background-color: var(--lightblue);
-  color: black;
-  border-radius: 5px;
-  padding: 2px 5px;
-}
-.action-btn:hover,
-.action-btn:active {
-  background-color: var(--red);
-  color: white;
-  cursor: pointer;
-}
-.action-btn:disabled {
-  color: black;
-  background-color: var(--lightblue);
-  opacity: 0.7;
-}
-
-.cell {
-  padding: 0;
-  background-color: transparent;
-  width: var(--space-s);
-  height: var(--space-s);
-  border: 1px solid var(--lightblue);
-  cursor: pointer;
-  font-size: var(--step-2);
-  display: grid;
-  place-items: center;
-  color: var(--red);
 }
 
 .flex-1 {
