--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
   height: 100%;
   position: relative;
   padding: var(--space-3xs);
-
+  background: url("./assets/countertall.png");
+  background-repeat: no-repeat;
   display: flex;
   flex-flow: column;
   justify-content: flex-end;
   align-items: center;
+  color: white;
 }
 
 .hold-container {
@@ -39,14 +41,13 @@
 
 .action-btn {
   border: 1px solid var(--darkgray);
-  background-color: var(--lightblue);
   color: black;
   border-radius: 5px;
-  padding: 2px 5px;
+  padding: var(--space-3xs) var(--space-2xs);
 }
 .action-btn:hover,
 .action-btn:active {
-  background-color: var(--red);
+  background-color: var(--yellow);
   color: white;
   cursor: pointer;
 }
@@ -56,17 +57,35 @@
   opacity: 0.7;
 }
 
+.ordersection {
+  margin-right: auto;
+  margin-bottom: auto;
+  display: flex;
+  gap: var(--space-2xs);
+}
+.recipe-icon {
+  font-size: 50px;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.15s;
+}
+.recipe-icon:hover {
+  background-color: transparent;
+  transform: scale(1.25);
+  transition: transform 0.15s;
+}
+
 .cell {
   padding: 0;
   background-color: transparent;
   width: var(--space-s);
   height: var(--space-s);
-  border: 1px solid var(--lightblue);
+  border: 1px solid var(--darkgray);
   cursor: pointer;
   font-size: var(--step-2);
   display: grid;
   place-items: center;
-  color: var(--red);
+  color: black;
 }
 
 .selected {
@@ -83,6 +102,6 @@
 
 .progress-bar {
   height: var(--space-3xs);
-  background-color: var(--darkgray);
+  background-color: var(--red);
   width: 0;
 }
