--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ body {
   display: flex;
 }
 
+.items-center {
+  align-items: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
