--- a/src/components/AngerMeter.css
+++ b/src/components/AngerMeter.css
@@ -54,3 +54,11 @@
     transform: translateX(0);
   }
 }
+
+.catface {
+  width: var(--space-l);
+  height: var(--space-l);
+  position: absolute;
+  top: 0;
+  right: 100%;
+}
