--- a/src/components/CounterGrid.css
+++ b/src/components/CounterGrid.css
@@ -13,10 +13,22 @@
   position: relative;
 }
 
-.grid-container .cell::after {
+.grid-container .cell:disabled::after {
   content: "";
   display: block;
   position: absolute;
   inset: 0;
   background-color: black;
+  cursor: pointer;
+  transform-origin: bottom;
+  animation: undisable 3s linear forwards
+}
+
+@keyframes undisable {
+  0% {
+    transform: scaleY(1);
+  }
+  100% {
+    transform: scaleY(0);
+  }
 }
