all the stuff... sounds, shrink grid, ads, recipes, all the fixes

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,9 @@
   border: none;
   background: inherit;
   cursor: pointer;
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
 }
 
 .ordersection {
