--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -9,7 +9,8 @@
   color: black;
   border: 0.3rem solid var(--text-color);
   border-radius: 1rem;
-  height: min-content;
+  height: max-content;
+  position: relative;
 }
 
 .dialog[open] {
@@ -49,8 +50,9 @@
   padding: 2.4rem;
   overflow: auto;
   height: 100%;
-  max-height: var(--space-3xl);
+  /* max-height: var(--space-3xl); */
   min-height: fit-content;
+
 }
 
 @media screen and (max-width: 32em) {
@@ -59,9 +61,91 @@
   }
 }
 
-.cooking-add {
+.cooking-ad {
   width: 100%;
-  height: var(--space-m);
+}
+
+.cooking-ad1 {
+  width: 100%;
+  animation: growWeird 10s ease infinite forwards;
+  overflow: hidden;
+  max-height: 0;
+  cursor: pointer;
+}
+
+.cooking-ad2 {
+  width: 100%;
+  animation: growWeird 20s 5s ease infinite forwards;
+  overflow: hidden;
+  max-height: 0;
+  cursor: pointer;
+}
+
+@keyframes growWeird {
+  0% {
+    max-height: 0;
+  }
+
+  20% {
+    max-height: 0;
+  }
+  40% {
+    max-height: 1000px;
+  }
+  50% {
+    max-height: 0;
+  }
+  100% {
+    max-height: 0;
+  }
+}
+
+
+/* .cooking-ad1 img {
+  width: 100%;
+} */
+
+.cooking-ad3 {
+  position: sticky;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.cooking-ad3 .adImg {
+  width: 50%;
+  transform-origin: right;
+  transform: scaleX(0%);
+  animation: slideWeird 10s 2s ease infinite;
+}
+
+@keyframes slideWeird {
+  0% {
+    transform: scaleX(0%);
+  }
+  20% {
+    transform: scaleX(0%);
+  }
+  35% {
+    transform: scaleX(100%);
+  }
+  65% {
+    transform: scaleX(100%);
+  }
+  80% {
+    transform: scaleX(0%);
+  }
+  100% {
+    transform: scaleX(0%);
+  }
+}
+
+.adImg {
+  width: 100%;
+  object-fit: contain;
+  display: block;
 }
 
 .swope {
@@ -90,4 +174,8 @@
 .recipe-grid {
   display: grid;
   grid-template-columns: repeat(3, var(--space-s));
+}
+
+p {
+  padding-top: 1rem;
 }
